--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,15 @@
  *= require_tree .
  *= require_self
  */
+
+.navbar-inverse .navbar-link {
+   color: white;
+ }
+
+.navbar {
+  margin-bottom: 0;
+}
+
+body {
+  background-color: white;
+}
