--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,7 +5,7 @@
   </p>
 </div>
 
-
+<% @question.each do |q| %>
 <div class="bs-example" data-example-id="default-media">
   <div class="media">
     <div class="media-left">
