Show answers to the questions

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,47 +5,23 @@
   </p>
 </div>
 
-<% @question.each do |q| %>
-<div class="bs-example" data-example-id="default-media">
-  <div class="media">
-    <div class="media-left">
-      <a href="#">
-        <img src="http://www.gravatar.com/avatar/sadfasd" />
-      </a>
-    </div>
-    <div class="media-body">
-      <h4 class="media-heading">user@emai.com asked:</h4>
-      Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in
-      faucibus.
-      <div><a href="/questions/12" class="btn btn-success btn-xs">View Answers</a></div>
-    </div>
-  </div>
-  <div class="media">
-    <div class="media-left">
-      <a href="#">
-        <img src="http://www.gravatar.com/avatar/sadfasd" />
-      </a>
-    </div>
-    <div class="media-body">
-      <h4 class="media-heading">testUser@email.com asked:</h4>
-      Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in
-      faucibus.
-      <div><a href="/questions/12" class="btn btn-success btn-xs">View Answers</a></div>
-    </div>
-  </div>
 
-  <div class="media">
-    <div class="media-left">
-      <a href="#">
-        <img src="http://www.gravatar.com/avatar/sadfasd" />
-      </a>
+<div class="bs-example" data-example-id="default-media">
+  <% @questions.each do |q| %>
+    <div class="media">
+      <div class="media-left">
+        <a href="#">
+          <img src="<%= q.gravatar %>" />
+        </a>
+      </div>
+      <div class="media-body">
+        <h4 class="media-heading"><%= q.email %> asked:</h4>
+        <p><%= time_ago_in_words q.created_at %> ago</p>
+        <%= q.body %>
+        <div><a href="<%= question_path(q) %>" class="btn btn-success btn-xs">View Answers</a></div>
+      </div>
     </div>
-    <div class="media-body">
-      <h4 class="media-heading">testUser@email.com asked:</h4>
-      Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in
-      faucibus.
-      <div><a href="/questions/12" class="btn btn-success btn-xs">View Answers</a></div>
-    </div>
-  </div>
+ <% end %>
+
 
 </div>
