--- a/app/views/home/_new_answer_form.html.erb
+++ b/app/views/home/_new_answer_form.html.erb
@@ -9,13 +9,13 @@
       </div>
       <%= form_for :answer, url: '/answers', html: {class: 'form-horizontal'} do  %>
           <div class="modal-body">
-
+            <input type="hidden" name="answer[question_id]" value="<%= @question.id %>">
               <div class="form-group">
                 <label for="inputEmail" class="col-sm-2 control-label">
                   Email
                 </label>
                 <div class="col-sm-10">
-                  <input type="email" name="email" class="form-control" id="inputEmail" placeholder="Email" required>
+                  <input type="email" name="answer[email]" class="form-control" id="inputEmail" placeholder="Email" required>
                 </div>
               </div>
               <div class="form-group">
@@ -23,7 +23,7 @@
                   Answer
                 </label>
                 <div class="col-sm-10">
-                  <textarea class="form-control" name="answer_body" id="inputQuestion" placeholder="What is your answer?" required></textarea>
+                  <textarea class="form-control" name="answer[body]" id="inputQuestion" placeholder="What is your answer?" required></textarea>
                 </div>
               </div>
           </div>
