--- a/app/views/home/_new_question_form.html.erb
+++ b/app/views/home/_new_question_form.html.erb
@@ -15,7 +15,7 @@
                   Email
                 </label>
                 <div class="col-sm-10">
-                  <input type="email" name="email" class="form-control" id="inputEmail" placeholder="Email" required>
+                  <input type="email" name="question[email]" class="form-control" id="inputEmail" placeholder="Email" required>
                 </div>
               </div>
               <div class="form-group">
@@ -23,7 +23,7 @@
                   Question
                 </label>
                 <div class="col-sm-10">
-                  <textarea class="form-control" name="question_body" id="inputQuestion" placeholder="What would you like to know?" required></textarea>
+                  <textarea class="form-control" name="question[body]" id="inputQuestion" placeholder="What would you like to know?" required></textarea>
                 </div>
               </div>
           </div>
