--- a/app/views/home/_new_question_form.html.erb
+++ b/app/views/home/_new_question_form.html.erb
@@ -15,7 +15,7 @@
                   Email
                 </label>
                 <div class="col-sm-10">
-                  <input type="email" name="question[email]" class="form-control" id="inputEmail" placeholder="Email" required>
+                  <input type="email" name="question[email]" class="form-control" id="inputEmail" placeholder="Email" required value="<%= current_user_email %>">
                 </div>
               </div>
               <div class="form-group">
