--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -23,5 +23,7 @@
     </div>
  <% end %>
 
-
+  <% if @questions.empty? %>
+    <div class="alert alert-info">Be the first to ask a question</div>
+  <% end %>
 </div>
