--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -42,6 +42,10 @@
         </div>
 
     </div>
-      <% end %>
+  <% end %>
+
+  <% if @answers.empty? %>
+   <div class="alert alert-info">Be the first to answer this question.</div>
+  <% end %>
   </div>
 </div>
