Sends an email to after user answers a question

--- a/app/views/main_mailer/notify_question_author.html.erb
+++ b/app/views/main_mailer/notify_question_author.html.erb
@@ -1,5 +1,8 @@
-<h1>MainMailer#notify_question_author</h1>
 
 <p>
-  <%= @greeting %>, find me in app/views/main_mailer/notify_question_author.html.erb
+  <%= @greeting %>
+
+  My answer:
+
+  <%= @answer.body %>
 </p>
